--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,12 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="back">Back</string>
+    <string name="enc_message">Do you want to Encript this file?</string>
+    <string name="decr_message">Do you want to Decript this file?</string>
+    <string name="decript">Decript</string>
+    <string name="encript">Encript</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="enc_">ENC_</string>
 
 </resources>
