Fixing up bugs in decrypt function

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="enc_">ENC_</string>
+    <string name="dec_">DEC_</string>
 
 </resources>
